--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,9 +24,8 @@
     <link href="/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="/lib/quill/quill.bubble.css"/>
     <link rel="stylesheet" href="/lib/quill/quill.snow.css"/>
-
-    <!-- Customized Bootstrap Stylesheet -->
     <link href="/css/bootstrap.min.css" rel="stylesheet"/>
+
 
     <link href="/css/daypilot.css" rel="stylesheet" type="text/css">
 
@@ -42,6 +41,7 @@
             href="https://uicdn.toast.com/tui.time-picker/latest/tui-time-picker.css"
     />
 
+
     <!--  select-->
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
@@ -50,8 +50,14 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.18.2/bootstrap-table.min.css"/>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0/css/bootstrap-select.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css">
     <!-- Template Stylesheet -->
     <link href="/css/style.css" rel="stylesheet"/>
+
+
+
 </head>
 <body>
 </body>
