--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -15,6 +15,8 @@
 <head>
 
 
+
+
 </head>
 
 
@@ -277,7 +279,7 @@
                             <label for="architectures" class="col-sm-12 col-form-label" name="architectures">Architecture
                                 <span style="color:red"> *</span>
                             </label>
-                            <select class="form-control select2 border-task-description " id="architectures" name="architectures" multiple="multiple">
+                            <select class="form-control select2  " id="architectures" name="architectures" multiple="multiple">
                                 <option selected="selected">orange</option>
                                 <option>white</option>
                                 <option>purple</option>
@@ -859,20 +861,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
-<script>
 
-    $(document).ready(function () {
-            console.log("Document is ready!");
-
-            $("#architectures, #systemOutlines, #deliverable").select2({
-                tags: true,
-                width: "100%",
-        });
-        });
-
-            console.log("error");
-
-</script>
 
 
 <script src="/lib/quill/quill.min.js"></script>
@@ -881,6 +870,20 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
+
+    $(document).ready(function () {
+        console.log("Document is ready!");
+
+        $("#architectures, #systemOutlines, #deliverable").select2({
+            tags: true,
+            width: "100%",
+        });
+    });
+
+    console.log("error");
+
+
+
     let quillEditors = document.querySelectorAll(
         ".quill-editor-bubble"
     );
@@ -939,14 +942,16 @@
         const userInput = quill.root.innerHTML;
         console.log(userInput);
     }
+
+
 </script>
 
 <!-- Include other libraries that depend on jQuery -->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0/js/bootstrap-select.min.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0/js/bootstrap-select.min.js"></script>-->
 
-<!--    for select drop-drown-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+<!--&lt;!&ndash;    for select drop-drown&ndash;&gt;-->
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>-->
 
 <!-- fontawesome -->
 <script src="/js/fontawesome.js"></script>
