--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -331,7 +331,7 @@
                                         </select>
                                     </div>
 
-                                    <div class="col-lg-12">
+                                    <div class="col-lg-12" style="margin-bottom: 80px;">
                                         <label for="objective"
                                             >Objective<span style="color: red">
                                                 *</span
@@ -341,7 +341,6 @@
                                             class="quill-editor-full"
                                             id="objective"
                                             name="objective"
-                                            style="height: 50px"
                                         ></div>
                                     </div>
 
@@ -677,11 +676,11 @@
                                                             id="headingOne"
                                                         >
                                                             <button
-                                                                class="accordion-button"
+                                                                class="accordion-button collapsed"
                                                                 type="button"
                                                                 data-bs-toggle="collapse"
                                                                 data-bs-target="#collapseOne"
-                                                                aria-expanded="true"
+                                                                aria-expanded="false"
                                                                 aria-controls="collapseOne"
                                                             >
                                                                 System Outline
@@ -961,7 +960,7 @@
                                                             background</label
                                                         >
                                                         <div
-                                                            class="col-md-8 col-lg-9"
+                                                            class="col-md-8 col-lg-9 overflow-hidden border border-dark p-0"
                                                         >
                                                             <div
                                                                 class="quill-editor-bubble"
@@ -1014,6 +1013,7 @@
                                                                 type="date"
                                                                 class="form-control"
                                                                 id="start-date"
+                                                                value="2017-06-01"
                                                             />
                                                         </div>
                                                     </div>
@@ -1043,7 +1043,7 @@
                                                             >Objective</label
                                                         >
                                                         <div
-                                                            class="col-md-8 col-lg-9"
+                                                            class="col-md-8 col-lg-9 overflow-hidden border border-dark p-0"
                                                         >
                                                             <div
                                                                 class="quill-editor-bubble"
